snapshots/syntax/library/functions/file/freefile/freefile_if_statement.snap
---
source: src/syntax/library/functions/file/freefile.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: fileNum
            - kind: Whitespace
              text: " "
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: " "
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "0"
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Whitespace
          text: " "
        - kind: AssignmentStatement
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: fileNum
            - kind: Whitespace
              text: " "
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: FreeFile
